# HapticPanel

./: .gitignore  LICENSE  README.md
Platform_files/3D_print/: Pulley_horizontal_axis.stl  Pulley_vertical_axis.stl
UnityHardwareBridge/: Protocol.txt
UnityHardwareBridge/cpp/ProtocolDecoder/: CMakeLists.txt  MessageBuilder.cpp  MessageBuilder.h  ProtocolParser.cpp  ProtocolParser.h  SerialPort.cpp  SerialPort.h  UnityPlugin.cpp  main.cpp  util.cpp
UnityHardwareBridge/cpp/RobotOutput/: CMakeLists.txt  SerialPort.cpp  SerialPort.h  UnityPlugin.cpp  main.cpp  util.h
VR Unity Core/: Documentation.txt
VR Unity Core/Assets/DemoManaging/: DemoManager.cs
VR Unity Core/Assets/InterfaceDeviceConnection/: DeviceConnector.cs  DeviceConnectorPerComponent_Button.cs  DeviceConnectorPerComponent_Slider.cs  HardwareEventDispatcher.cs  IInterfaceMoverAlgorithm.cs  InterfaceMoverAlgorithm_ClosestComponentPosition.cs  InterfaceMoverAlgorithm_PlanarShortestPathImproved.cs  InterfacePositioner.cs
VR Unity Core/Assets/Interfaces/: Interface.cs  InterfaceVisualizer.cs
VR Unity Core/Assets/OpeningScreen/: OpeningScreen.unity
VR Unity Core/Assets/Scripts/: IPOReceiver.cs  POPlacer.cs  POReceiver_Visualizer.cs  WorldCoordinateInspector.cs  button_outside_titanium.mat  button_standard_yellow.mat
VR Unity Core/Assets/Tracking/: TrackerFollower.cs  TrackerSelector.cs  Tracker_ObjectFollower.cs
VR Unity Core/Assets/VRScene/: Behaviour.cs  VRComponent.cs  (+1 more)
VR Unity Core/ProjectSettings/: ProjectSettings.asset
VR_Unity_Core/ProjectSettings/: ProjectSettings.asset
(+49 files in other folders)
